Rename Organic style to Cookies

--- a/src/StyleSwitcherPiano/StyleSwitcherPiano.css
+++ b/src/StyleSwitcherPiano/StyleSwitcherPiano.css
@@ -27,7 +27,7 @@
   font-family: cursive;
 }
 
-.style-switcher-piano-btn.organic {
+.style-switcher-piano-btn.cookies-and-cream {
   font-size: 19px;
   font-family: monospace;
 }
